tests/test62.rael.exp
Error [2:10]: Invalid operation (-) on types
|     :a 2 - "1"
|          ^
